# vipyto

./: .readthedocs.yml  README.md  pyproject.toml
docs/: conf.py  index.rst  requirements-docs.txt
vipyto/: __init__.py  cli.py  cmd.py  docs.py  path.py  train.py
